# uxlivinglab

./: Dockerfile  docker-compose.yml
.github/workflows/: main.yml
app/: .env  pyproject.toml
app/drf_project/: settings.py  urls.py
app/pdf/: models.py  urls.py  views.py
app/templates/: upload.html
